Tiger_frontend/project1_test_code_example/tests/correct/function-param-multi.tiger
main let
    function print ( n : int, m : int, x : float ) : int begin
            printi(n);
            return n;
    end;
in begin
        print(5);
end