Tiger_frontend/project1_test_code_example/tests/errors/function-call-not-exists.tiger
main let
        function print ( ) begin
                printi(7);
        end;
in begin
        printT(8,9);
end
